syntax = 'proto2';

message EnvironmentalData {
	optional uint64 timestamp = 1; // Epoch seconds.
	optional uint32 aqi_pm25_standard_10_m_avg = 2;
	optional float temp_c_10_m_avg = 3;
	optional float humidity_10_m_avg = 4;
}
